[gd_scene load_steps=18 format=2]

[ext_resource path="res://props/checkpoint/checkpoint.gd" type="Script" id=1]
[ext_resource path="res://assets/light_mask.png" type="Texture" id=2]
[ext_resource path="res://assets/tileset.png" type="Texture" id=3]
[ext_resource path="res://assets/sfx/checkpoint.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 13 )

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

void fragment()
{
	vec2 uv = UV;
	uv.x += 2.0 * TEXTURE_PIXEL_SIZE.x * sin( 7.0 * uv.y + 2.0 * TIME );
	COLOR = texture( TEXTURE, uv );
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )

[sub_resource type="Animation" id=4]
resource_name = "cycle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 2 ),
"update": 0,
"values": [ Vector2( -2, 0 ), Vector2( -2, -4 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../light_mask:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.65098, 0.988235, 0.858824, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.784314 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../light_mask:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.65098, 0.988235, 0.858824, 0 ), Color( 0.65098, 0.988235, 0.858824, 0.321569 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.784314 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../light_mask:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.65098, 0.988235, 0.858824, 0.321569 ), Color( 0.65098, 0.988235, 0.858824, 0 ) ]
}

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0, 0.587302 )
colors = PoolColorArray( 0.65098, 0.988235, 0.858824, 1, 0.65098, 0.988235, 0.858824, 0 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
emission_shape = 1
emission_sphere_radius = 5.0
flag_disable_z = true
spread = 20.0
gravity = Vector3( 0, 30, 0 )
angular_velocity = 1.49184e-019
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 200.0
damping = 155.0
color_ramp = SubResource( 9 )

[sub_resource type="Animation" id=11]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("particle_center:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( -1.19209e-007, -19 ), Vector2( -1.19209e-007, -23 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("tileset:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
tracks/0/type = "value"
tracks/0/path = NodePath("particle_center:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1.19209e-007, -20.28 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("particle_center:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-005, 1e-005 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("particle_center/Particles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=13]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("particle_center:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1.19209e-007, -20.28 ), Vector2( -1.19209e-007, -20.28 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("particle_center:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-005, 1e-005 ), Vector2( 1.4, 1.4 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("particle_center/Particles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="checkpoint" type="Area2D"]
position = Vector2( 65, 61 )
monitorable = false
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -13 )
shape = SubResource( 1 )

[node name="light_mask" type="Sprite" parent="."]
modulate = Color( 0.65098, 0.988235, 0.858824, 0.321569 )
show_behind_parent = true
material = SubResource( 3 )
position = Vector2( 0, -23 )
rotation = 3.14159
texture = ExtResource( 2 )

[node name="tileset" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 136, 128, 16, 16 )
__meta__ = {
"_edit_lock_": true
}

[node name="arrow" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.784314 )
position = Vector2( -2, 0 )
rotation = 3.14159
z_index = 10
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 40, 168, 8, 8 )

[node name="anim_arrow" type="AnimationPlayer" parent="arrow"]
autoplay = "cycle"
anims/cycle = SubResource( 4 )

[node name="anim_fade" type="AnimationPlayer" parent="arrow"]
autoplay = "default"
playback_speed = 3.0
anims/default = SubResource( 5 )
anims/fade_in = SubResource( 6 )
anims/fade_out = SubResource( 7 )

[node name="particle_center" type="Sprite" parent="."]
position = Vector2( -1.19209e-007, -20.28 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 24, 176, 16, 16 )

[node name="Particles2D" type="Particles2D" parent="particle_center"]
show_behind_parent = true
rotation = -1.57079
amount = 40
local_coords = false
process_material = SubResource( 10 )

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "default"
playback_speed = 2.0
anims/cycle = SubResource( 11 )
anims/default = SubResource( 12 )
anims/start = SubResource( 13 )
blend_times = [ "cycle", "start", 0.5, "start", "cycle", 0.5, "start", "start", 0.5 ]

[node name="checkpoint" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "sfx"

[node name="delay_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="load_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true
[connection signal="body_entered" from="." to="." method="_on_checkpoint_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_checkpoint_body_exited"]
[connection signal="timeout" from="delay_timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="load_timer" to="." method="_on_load_timer_timeout"]
